# STM32F1x_Template

./: CMakeLists.txt  gcc_arm-none-eabi.cmake  gcc_cxx_compile.cmake  stm32f103.cfg
Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: system_stm32f10x.c
Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/startup/TrueSTUDIO/: startup_stm32f10x_md.s
Libraries/STM32F10x_StdPeriph_Driver/src/: stm32f10x_gpio.c  stm32f10x_rcc.c
src/: main.c
startup/: stm32_flash.ld
